--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
                             <label class="label">
                               <span class="label-text">Phone Number</span>
                             </label>
-                            <input type="text" placeholder="Your Phone Number" class="input input-bordered" required />
+                            <input id="phone-number" type="text" placeholder="Your Phone Number" class="input input-bordered" required />
                           </div>
                           <div class="form-control">
                             <label class="label">
                               <span class="label-text">PIN</span>
                             </label>
-                            <input type="password" placeholder="Your PIN" class="input input-bordered" required />
+                            <input type="password" placeholder="Your PIN" class="input input-bordered" autocomplete="off" required />
                             <label class="label">
                               <a href="#" class="label-text-alt link link-hover">Forgot PIN?</a>
                             </label>
                           </div>
                           <div class="form-control mt-6">
-                            <button class="btn btn-primary">Login</button>
+                            <button id="button-login" class="btn btn-primary">Login</button>
                           </div>
                         </form>
                       </div>
@@ -46,5 +46,6 @@
             </div>
         </div>
     </main>
+    <script src="js/login.js"></script>
 </body>
 </html>
